--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.104.0"
 uvicorn = "^0.23.2"
 pyyaml = "^6.0.1"
 redis = "^5.0.1"
+dependency-injector = "^4.41.0"
 
 
 [build-system]
