--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ redis = "^5.0.1"
 dependency-injector = "^4.41.0"
 
 
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.3"
+httpx = "^0.25.0"
+fakeredis = "^2.20.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
